<resources>
    <string name="app_name">Server</string>
    <string name="camera_app_name">Score Camera</string>
    <string name="screen_capture_app_name">Score Screen Capture</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="microphone_app_name">Score Microphone</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="default_ip">224.0.0.251</string>
    <string name="default_port">9810</string>
</resources>
